assets/css/style.css
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

/* Menu Styles */
.home-menu {
    padding: 0.5em;
    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
    background: olive;
}
.pure-menu.pure-menu-fixed {
    /* Fixed menus normally have a border at the bottom. */
    border-bottom: none;
    /* I need a higher z-index here because of the scroll-over effect. */
    z-index: 4;
}

.home-menu .pure-menu-heading {
    color: white;
    font-weight: 400;
    font-size: 200%;
    text-align: left;
    font-family: 'Playfair Display';
}

.home-menu .pure-menu-link{
    color: white;
    text-align: right;
}

.home-menu a {
    color: #6FBEF3;
}
.home-menu li a:hover,
.home-menu li a:focus {
    background: none;
    border: none;
    color: #AECFE5;
}

/* LAYOUT CSS */
.pure-img-responsive {
    width: 280px;
    height: 550px;
}

#layout {
    padding: 0;
}

.sidebar {
    background: maroon;
    color: #fff;
    margin-top: 2em;
}

html, body {
    height: 100%;
    margin: 0;
    background-color: olive;
}

.pure-button {
    color: white;
    border-radius: 4px;
    background: maroon;
    text-shadow: 0 1px 1px rgba(0,0,0, 0.2);
}

.content-subhead {
    padding-top: 2em;
    text-transform: uppercase;
    color: #aaa;
    border-bottom: 1px solid #eee;
    padding: 0.4em 0;
    font-size: 80%;
    font-weight: 500;
    letter-spacing: 0.1em;
}

.content {
    margin-top: 2em;
    padding-top: 2em;
    padding: 2em 1em 0;
}

.footer {
    position: fixed;
    bottom: 0;
    background: none;
    padding: 1em 0;
}
.footer a {
    color: #ccc;
    font-size: 80%;
}
.footer .pure-menu a:hover,
.footer .pure-menu a:focus {
    background: none;
}


@media (min-width: 48em) {
    .content {
        padding: 2em 3em 0;
        margin-left: 20%;
    }

    /* .header {
        margin: 80% 2em 0;
        text-align: left;
    } */

    .sidebar {
        position: fixed;
        top: 0;
        bottom: 0;
    }

    .footer {
        text-align: center;
    }

    /* We increase the body font size */
    body {
        font-size: 16px;
    }
    
    /* We can align the menu header to the left, but float the
    menu items to the right. */
    .home-menu {
        text-align: left;
    }
        .home-menu ul {
            float: right;
        }    

}

